<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg03"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_logo_square" />

        <ImageView
            android:layout_width="256dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo_horizontal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_access_code"
            android:textColor="@color/white" />


        <EditText
            android:id="@+id/inputCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1.3"
            android:background="@drawable/background_edit_text_no_border"
            android:hint="@string/access_code"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:padding="8dp"
            android:textColor="#4c4c4c" />

        <LinearLayout
            android:id="@+id/layoutStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/imageStatus"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/check" />

            <TextView
                android:id="@+id/textStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/access_accepted"
                android:textColor="@color/white" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonStart"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="0.7"
            android:hint="@string/start"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/dont_have_access_code"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/contact"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/penantian_com"
                android:textColor="#FFE082" />

        </LinearLayout>

    </LinearLayout>


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/textVersion"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:paddingVertical="8dp" />

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/textCopyright"
        android:text="Versi 1.0"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginBottom="16dp"
        android:id="@+id/textCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:text="@string/text_copyright"
        android:textColor="@color/white"/>



</RelativeLayout>