<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".fragment.SettingFragment">

    <ImageView
        android:layout_centerHorizontal="true"
        android:id="@+id/image"
        android:layout_width="256dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_logo_horizontal" />

    <androidx.cardview.widget.CardView
        android:layout_below="@id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/buttonHelp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="PENGATURAN"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sheet_name"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:textColor="@color/black"
                    android:id="@+id/inputSheetName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_edit_text"
                    android:padding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/id_sheet"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:textColor="@color/black"
                    android:id="@+id/inputSheetId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_edit_text"
                    android:padding="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/column"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <EditText
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:id="@+id/inputColumn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/background_edit_text"
                            android:padding="8dp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/buttonSave"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:layout_toStartOf="@id/imageStatus"
                                android:backgroundTint="@color/black"
                                android:text="@string/save"
                                android:textColor="@color/white" />

                            <ImageView
                                android:id="@+id/imageStatus"
                                android:layout_width="18dp"
                                android:layout_height="18dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"
                                android:layout_margin="8dp"
                                android:src="@drawable/check"
                                android:visibility="invisible" />
                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/row"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <EditText
                            android:textAllCaps="true"
                            android:inputType="textPersonName"
                            android:textColor="@color/black"
                            android:id="@+id/inputRow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/background_edit_text"
                            android:padding="8dp" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/notes"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:visibility="gone"
                    android:textColor="#4C4C4C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/note_value" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:id="@+id/buttonHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        android:textColor="@color/purple_200"
        android:text="@string/help"/>
</RelativeLayout>