<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".fragment.ResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layoutAction"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="256dp"
            android:layout_height="156dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="No"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:id="@+id/buttonOpenSpreadsheet"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/white"
            android:textColor="@color/purple_200"
            android:text="@string/open_spreadsheet"
            android:textSize="12sp"
            android:maxLines="1"/>



        <com.google.android.material.button.MaterialButton
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:id="@+id/buttonExport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/white"
            android:textColor="@color/purple_200"
            android:text="@string/export_pdf"
            android:textSize="12sp"
            android:maxLines="1"/>


    </LinearLayout>

    <include
        android:visibility="invisible"
        android:id="@+id/pdf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/pdf_result"/>
</RelativeLayout>